--- a/package.json
+++ b/package.json
@@ -27,6 +27,5 @@
   "bugs": {
     "url": "https://github.com/faahim/happy-birthday/issues"
   },
-  "homepage": "https://github.com/faahim/happy-birthday#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/faahim/happy-birthday#readme"
 }
